add open sans for multi-langauge support

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,6 +1,6 @@
 @use "./mixins" as *;
 
-// Sideload inter as a fallback font
+// Sideload Inter and Open Sans as fallback fonts (inter for english, open sans for everything else)
 @font-face {
 	font-family: "Inter";
 	font-style: normal;
@@ -19,12 +19,31 @@
 	font-named-instance: "Italic";
 }
 
+@font-face {
+	font-family: "Open Sans";
+	font-style: normal;
+	font-weight: 100 900;
+	font-display: swap;
+	src: url("/fonts/OpenSans-roman.var.woff2") format("woff2");
+	font-named-instance: "Regular";
+}
+
+@font-face {
+	font-family: "Open Sans";
+	font-style: italic;
+	font-weight: 100 900;
+	font-display: swap;
+	src: url("/fonts/OpenSans-italic.var.woff2") format("woff2");
+	font-named-instance: "Italic";
+}
+
 /*
  * Global Variables
  */
 
 :root {
-	--font-family-sans-serif: "Segoe UI Variable Display", "Segoe UI", "Inter", sans-serif;
+	--fds-font-family-fallback: "Segoe UI", "Inter", "Open Sans", -apple-system, ui-sans-serif, system-ui, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
+	--font-family-sans-serif: var(--fds-font-family-display);
 	--font-family-monospace: "Cascadia Code", "Fira Code", "Consolas", monospace;
 	overflow-x: hidden;
 }
@@ -123,6 +142,7 @@ code {
 	@media (prefers-color-scheme: light) {
 		@include prism-vs-light;
 	}
+
 	@media (prefers-color-scheme: dark) {
 		@include prism-vs-dark;
 	}
@@ -132,6 +152,7 @@ code {
 // Utility class to create a styled scroller and scrollbar
 .scroller {
 	overflow: auto;
+
 	@supports (overflow: overlay) {
 		overflow: overlay;
 	}
@@ -150,6 +171,7 @@ code {
 				--scrollbar-caret-top: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M6.10204 16.9814C5.0281 16.9814 4.45412 15.7165 5.16132 14.9083L10.6831 8.59765C11.3804 7.80083 12.6199 7.80083 13.3172 8.59765L18.839 14.9083C19.5462 15.7165 18.9722 16.9814 17.8983 16.9814H6.10204Z' fill='hsl(0, 0%, 0%, 0.447)'/%3E%3C/svg%3E");
 				--scrollbar-caret-bottom: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M6.10204 8C5.0281 8 4.45412 9.2649 5.16132 10.0731L10.6831 16.3838C11.3804 17.1806 12.6199 17.1806 13.3172 16.3838L18.839 10.0731C19.5462 9.2649 18.9722 8 17.8983 8H6.10204Z' fill='hsl(0, 0%, 0%, 0.447)'/%3E%3C/svg%3E");
 			}
+
 			@media (prefers-color-scheme: dark) {
 				--scrollbar-caret-top: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M6.10204 16.9814C5.0281 16.9814 4.45412 15.7165 5.16132 14.9083L10.6831 8.59765C11.3804 7.80083 12.6199 7.80083 13.3172 8.59765L18.839 14.9083C19.5462 15.7165 18.9722 16.9814 17.8983 16.9814H6.10204Z' fill='hsl(0, 0%, 100%, 0.545)'/%3E%3C/svg%3E");
 				--scrollbar-caret-bottom: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M6.10204 8C5.0281 8 4.45412 9.2649 5.16132 10.0731L10.6831 16.3838C11.3804 17.1806 12.6199 17.1806 13.3172 16.3838L18.839 10.0731C19.5462 9.2649 18.9722 8 17.8983 8H6.10204Z' fill='hsl(0, 0%, 100%, 0.545)'/%3E%3C/svg%3E");
@@ -161,6 +183,7 @@ code {
 				--scrollbar-caret-top: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M9 17.8983C9 18.9722 10.2649 19.5462 11.0731 18.839L17.3838 13.3172C18.1806 12.6199 18.1806 11.3804 17.3838 10.6831L11.0731 5.16132C10.2649 4.45412 9 5.02809 9 6.10204V17.8983Z' fill='hsl(0, 0%, 0%, 0.447)'/%3E%3C/svg%3E");
 				--scrollbar-caret-bottom: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M15 17.8983C15 18.9722 13.7351 19.5462 12.9268 18.839L6.61617 13.3172C5.81935 12.6199 5.81935 11.3804 6.61617 10.6831L12.9268 5.16132C13.7351 4.45412 15 5.02809 15 6.10204L15 17.8983Z' fill='hsl(0, 0%, 100%, 0.545)'/%3E%3C/svg%3E");
 			}
+
 			@media (prefers-color-scheme: dark) {
 				--scrollbar-caret-top: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M9 17.8983C9 18.9722 10.2649 19.5462 11.0731 18.839L17.3838 13.3172C18.1806 12.6199 18.1806 11.3804 17.3838 10.6831L11.0731 5.16132C10.2649 4.45412 9 5.02809 9 6.10204V17.8983Z' fill='hsl(0, 0%, 0%, 0.447)'/%3E%3C/svg%3E");
 				--scrollbar-caret-bottom: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M15 17.8983C15 18.9722 13.7351 19.5462 12.9268 18.839L6.61617 13.3172C5.81935 12.6199 5.81935 11.3804 6.61617 10.6831L12.9268 5.16132C13.7351 4.45412 15 5.02809 15 6.10204L15 17.8983Z' fill='hsl(0, 0%, 100%, 0.545)'/%3E%3C/svg%3E");
@@ -169,8 +192,8 @@ code {
 
 		&:hover {
 			background: var(--scrollbar-caret-bottom) bottom center/contain no-repeat,
-			var(--scrollbar-caret-top) top center/contain no-repeat,
-			hsl(var(--mica-tint), var(--mica-tint-opacity));
+				var(--scrollbar-caret-top) top center/contain no-repeat,
+				hsl(var(--mica-tint), var(--mica-tint-opacity));
 		}
 
 		&-thumb {
@@ -217,9 +240,11 @@ code {
 	from {
 		background-position: 50% 0;
 	}
+
 	50% {
 		background-position: 50% 100%;
 	}
+
 	to {
 		background-position: 50% 0;
 	}
