--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -108,8 +108,8 @@ textarea {
 // Outer elements -- <html> and <body>
 html,
 body {
-	inline-size: 100%;
-	block-size: 100%;
+	block-size: 100vh;
+	block-size: 100dvh;
 	margin: 0;
 	background-color: var(--fds-solid-background-secondary);
 }
@@ -122,14 +122,7 @@ html {
 }
 
 body {
-	@include flex($direction: column);
 	font-size: 1.4rem;
-	block-size: fit-content;
-	min-block-size: 100%;
-
-	&:nth-child(2) {
-		min-block-size: calc(100vh - 58px);
-	}
 }
 
 // Only render inner <img> elements into the DOM
