--- a/src/styles/pages/blogPost.scss
+++ b/src/styles/pages/blogPost.scss
@@ -1,6 +1,9 @@
 @use "../mixins" as *;
 
 .blog-post {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	padding: 48px;
 	margin-inline: auto;
 	max-inline-size: 100%;
