--- a/src/layout/FeaturesSection/FeaturesSection.scss
+++ b/src/layout/FeaturesSection/FeaturesSection.scss
@@ -8,7 +8,7 @@
 		// Inner section
 		.page-section-inner {
 			display: grid;
-			grid-template-columns: calc(50% - 24px) calc(50% - 24px);
+			grid-template-columns: calc(25%% - 24px) calc(25% - 24px) calc(25% - 24px) calc(25% - 24px);
 			grid-gap: 48px;
 		}
 	}
