--- a/src/layout/Navbar/Navbar.scss
+++ b/src/layout/Navbar/Navbar.scss
@@ -23,10 +23,12 @@
 	padding: 5px 11px 6px 11px;
 	border-radius: var(--fds-control-corner-radius);
 	color: var(--fds-text-secondary);
+
 	font: {
 		size: 1.36rem;
 		weight: normal;
 	}
+
 	text-decoration: none;
 	transition: var(--fds-control-faster-duration) linear background-color;
 
@@ -41,6 +43,21 @@
 
 	&:active {
 		background-color: var(--fds-subtle-fill-tertiary);
+	}
+
+	&.accent {
+		background-color: var(--fds-accent-default);
+		color: var(--fds-text-on-accent-primary);
+
+		&:hover {
+			background-color: var(--fds-accent-secondary);
+		}
+
+		&:active {
+			background-color: var(--fds-accent-tertiary);
+			color: var(--fds-text-on-accent-secondary);
+		}
+
 	}
 
 	:global(svg) {
@@ -59,10 +76,12 @@
 	@include flex($align: center);
 	margin-inline-end: 8px;
 	color: var(--fds-text-primary);
+
 	font: {
 		size: 2rem;
 		weight: 600;
 	}
+
 	text-decoration: none;
 	transition: 100ms ease;
 
@@ -77,8 +96,8 @@
 	}
 }
 
-.support-ukraine{
-	display:flex;
+.support-ukraine {
+	display: flex;
 	width: 30px;
 	height: 20px;
 	background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMjAwIDgwMCI+DQo8cGF0aCBmaWxsPSIjM2E3NWM0IiBkPSJtMCwwaDEyMDB2ODAwaC0xMjAweiIvPg0KPHBhdGggZmlsbD0iI2Y5ZGQxNiIgZD0ibTAsNDAwaDEyMDB2NDAwaC0xMjAweiIvPg0KPC9zdmc+DQo=);
