switched to an outline on the feature cards removed unused imports added functions for typing object keys/values/entries added recommended extensions

--- a/src/layout/FeaturesSection/FeaturesSection.scss
+++ b/src/layout/FeaturesSection/FeaturesSection.scss
@@ -26,8 +26,9 @@
 // <FeatureCard /> container
 // Container element for selecting features to preview
 .feature-cards-container {
+	--column-count: 3;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: repeat(var(--column-count), 1fr);
 	grid-gap: 8px;
 
 	// Small device support
