--- a/src/layout/FeaturesSection/FeaturesSection.scss
+++ b/src/layout/FeaturesSection/FeaturesSection.scss
@@ -8,7 +8,7 @@
 		// Inner section
 		.page-section-inner {
 			display: grid;
-			grid-template-columns: calc(50% - 24px) calc(50% - 24px);
+			grid-template-columns: repeat(auto-fill, 1fr);
 			grid-gap: 48px;
 		}
 	}
@@ -26,8 +26,9 @@
 // <FeatureCard /> container
 // Container element for selecting features to preview
 .feature-cards-container {
+	--column-count: 3;
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: repeat(var(--column-count), 1fr);
 	grid-gap: 8px;
 
 	// Small device support
