--- a/src/layout/Navbar/Navbar.scss
+++ b/src/layout/Navbar/Navbar.scss
@@ -8,7 +8,7 @@
 
 .navbar {
 	position: sticky;
-	top: 0;
+	inset-block-start: 0;
 	z-index: 10;
 	justify-content: space-between;
 	flex: 0 0 auto;
