--- a/src/layout/Navbar/Navbar.scss
+++ b/src/layout/Navbar/Navbar.scss
@@ -39,6 +39,10 @@
 		background-color: var(--fds-subtle-fill-secondary);
 	}
 
+	&:active {	
+		background-color: var(--fds-subtle-fill-tertiary);	
+	}
+
 	:global(svg) {
 		@include icon($size: 16px);
 		margin-inline-end: 4px;
