--- a/src/layout/Navbar/Navbar.scss
+++ b/src/layout/Navbar/Navbar.scss
@@ -7,13 +7,15 @@
 }
 
 .navbar {
-	position: relative;
+	position: sticky;
+	inset-block-start: 0;
 	z-index: 10;
 	justify-content: space-between;
 	flex: 0 0 auto;
 	block-size: 58px;
 	padding: 12px 18px;
-	background-color: var(--fds-solid-background-base);
+	background-color: hsl(var(--mica-tint), var(--mica-tint-opacity));
+	backdrop-filter: blur(20px) saturate(150%);
 	user-select: none;
 }
 
@@ -166,9 +168,7 @@
 		inset-inline-start: 0;
 		inline-size: 100%;
 		block-size: 64px;
-		background-color: hsl(var(--mica-tint), var(--mica-tint-opacity));
 		overflow: visible;
-		backdrop-filter: blur(60px) saturate(150%);
 	}
 
 	.sidebar {
