--- a/src/layout/FeaturesSection/preview/PreviewShowcase.scss
+++ b/src/layout/FeaturesSection/preview/PreviewShowcase.scss
@@ -9,8 +9,10 @@
 		@include flex($direction: column);
 		inline-size: 260px;
 		block-size: 390px;
-		border-radius: var(--fds-overlay-corner-radius) 0 0 var(--fds-overlay-corner-radius);
-		animation: 400ms cubic-bezier(0.1, 0.9, 0.2, 1) preview-pane-open backwards 800ms;
+		border-radius: var(--fds-overlay-corner-radius) 0 0
+			var(--fds-overlay-corner-radius);
+		animation: 400ms cubic-bezier(0.1, 0.9, 0.2, 1) preview-pane-open backwards
+			800ms;
 
 		// Inner preview pane elements
 		// File preview and file metadata
@@ -142,12 +144,18 @@
 		display: grid;
 		grid-gap: 4px;
 		padding: 12px;
-		animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms;
+		animation: feature-panel 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards
+			400ms;
 
 		// File entries
 		.file {
-			@include flex($direction: column, $justify: space-between, $align: center);
-			animation: var(--fds-control-normal-duration) ease feature-item-scale backwards calc(400ms + (100ms * var(--file-index)));
+			@include flex(
+				$direction: column,
+				$justify: space-between,
+				$align: center
+			);
+			animation: var(--fds-control-normal-duration) ease feature-item-scale
+				backwards calc(400ms + (100ms * var(--file-index)));
 			inline-size: 84px;
 			block-size: 96px;
 			padding: 12px;
@@ -167,7 +175,7 @@
 				border-radius: calc(var(--fds-control-corner-radius) + 2px);
 				background-color: var(--fds-subtle-fill-secondary);
 				box-shadow: inset 0 0 0 2px var(--fds-accent-default),
-				inset 0 0 0 3px var(--fds-solid-background-base);
+					inset 0 0 0 3px var(--fds-solid-background-base);
 			}
 
 			// File entry icon
