--- a/src/layout/ThemesSection/ThemesSection.scss
+++ b/src/layout/ThemesSection/ThemesSection.scss
@@ -3,7 +3,8 @@
 :global {
 	// Outer section
 	#themes-section {
-		border-radius: 0 0 var(--fds-overlay-corner-radius) var(--fds-overlay-corner-radius);
+		border-radius: 0 0 var(--fds-overlay-corner-radius)
+			var(--fds-overlay-corner-radius);
 		background-color: var(--fds-card-background-secondary);
 		overflow: hidden;
 
@@ -23,12 +24,13 @@
 			inline-size: 200vw;
 			block-size: 200vw;
 			background-image: linear-gradient(
-							90deg,
-							transparent 10%,
-							var(--dots-color, var(--fds-control-stroke-secondary)) 100%
+				90deg,
+				transparent 10%,
+				var(--dots-color, var(--fds-control-stroke-secondary)) 100%
 			);
 			transform: rotate(30deg);
-			mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Ccircle cx='50' cy='50' r='10' fill='%23000' /%3E%3C/svg%3E") center/18px;
+			mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Ccircle cx='50' cy='50' r='10' fill='%23000' /%3E%3C/svg%3E")
+				center/18px;
 		}
 
 		// HACK: --fds-solid-background-base is a fairly generic variable that makes more sense to style on themes other than default.
@@ -250,7 +252,8 @@
 
 		img,
 		.card {
-			animation: showcase-item var(--fds-control-normal-duration) var(--fds-control-fast-out-slow-in-easing) forwards var(--initial-delay);
+			animation: showcase-item var(--fds-control-normal-duration)
+				var(--fds-control-fast-out-slow-in-easing) forwards var(--initial-delay);
 		}
 
 		.layout {
