--- a/src/lib/ColorSwatch/ColorSwatch.scss
+++ b/src/lib/ColorSwatch/ColorSwatch.scss
@@ -13,13 +13,14 @@
 				&:checked {
 					border-radius: calc(var(--fds-control-corner-radius) + 2px);
 					box-shadow: inset 0 0 0 2px var(--fds-accent-default),
-					inset 0 0 0 3px var(--fds-solid-background-base);
+						inset 0 0 0 3px var(--fds-solid-background-base);
 				}
 
 				&:focus-visible {
 					box-shadow: inset 0 0 0 2px var(--fds-accent-default),
-					inset 0 0 0 3px var(--fds-solid-background-base),
-					0 0 0 1px var(--fds-solid-background-base), 0 0 0 3px var(--fds-focus-stroke-outer) !important;
+						inset 0 0 0 3px var(--fds-solid-background-base),
+						0 0 0 1px var(--fds-solid-background-base),
+						0 0 0 3px var(--fds-focus-stroke-outer) !important;
 				}
 			}
 
@@ -30,7 +31,7 @@
 
 				&:checked {
 					box-shadow: 0 0 0 1px var(--fds-solid-background-base),
-					0 0 0 3px var(--fds-focus-stroke-outer);
+						0 0 0 3px var(--fds-focus-stroke-outer);
 				}
 			}
 		}
