--- a/src/lib/TerminalCommand/TerminalCommand.scss
+++ b/src/lib/TerminalCommand/TerminalCommand.scss
@@ -52,7 +52,7 @@
 		background-color: var(--fds-subtle-fill-tertiary);
 	}
 
-	:global(svg) {
+	:global(.fluent-icon) {
 		transition: 130ms cubic-bezier(0.16, 0.16, 0, 1) transform;
 		@include icon($size: 18px);
 	}
