--- a/src/styles/pages/blog.scss
+++ b/src/styles/pages/blog.scss
@@ -46,11 +46,11 @@
 		border: 1px solid var(--fds-surface-stroke-default);
 		border-radius: var(--fds-overlay-corner-radius);
 		box-shadow: 0 2.74416px 2.74416px hsl(0, 0%, 0%, 3%),
-		0 5.48831px 5.48831px hsl(0, 0%, 0%, 4%),
-		0 13.7208px 10.9766px hsl(0, 0%, 0%, 5%),
-		0 20.5812px 20.5812px hsl(0, 0%, 0%, 6%),
-		0 41.1623px 41.1623px hsl(0, 0%, 0%, 7%),
-		0 96.0454px 89.1851px hsl(0, 0%, 0%, 9%);
+			0 5.48831px 5.48831px hsl(0, 0%, 0%, 4%),
+			0 13.7208px 10.9766px hsl(0, 0%, 0%, 5%),
+			0 20.5812px 20.5812px hsl(0, 0%, 0%, 6%),
+			0 41.1623px 41.1623px hsl(0, 0%, 0%, 7%),
+			0 96.0454px 89.1851px hsl(0, 0%, 0%, 9%);
 		transition: 200ms ease !important;
 		-webkit-user-drag: none;
 		aspect-ratio: 3 / 2;
@@ -63,7 +63,9 @@
 		}
 	}
 
-	:global(.button) { cursor: pointer; }
+	:global(.button) {
+		cursor: pointer;
+	}
 }
 
 .blog-cards {
