i think this is vertically centered

--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -247,6 +247,6 @@
 		border-radius: 50%;
 		outline: 1px solid;
 		outline-color: var(--fds-divider-stroke-default);
-		vertical-align: middle;
+		vertical-align: sub;
 	}
 }
