--- a/src/layout/Navbar/Navbar.scss
+++ b/src/layout/Navbar/Navbar.scss
@@ -17,6 +17,7 @@
 	background-color: hsl(var(--mica-tint), var(--mica-tint-opacity));
 	backdrop-filter: blur(20px) saturate(150%);
 	user-select: none;
+	view-transition-name: navbar;
 }
 
 .item {
