--- a/src/lib/PageSection/PageSection.scss
+++ b/src/lib/PageSection/PageSection.scss
@@ -4,50 +4,49 @@
 	position: relative;
 	z-index: 1;
 
-	:global {
-		h1,
-		h2,
-		h3 {
-			margin: 0;
-			color: var(--fds-text-primary);
-			font-weight: 600;
+	:global(:is(h1, h2, h3)) {
+		margin: 0;
+		color: var(--fds-text-primary);
+		font-weight: 600;
+	}
+
+	:global(h1) {
+		font-size: 7.2rem;
+	}
+
+	:global(h2) {
+		font-size: 4.8rem;
+	}
+
+	:global(h3) {
+		font-size: 3.2rem;
+	}
+
+	:global(p) {
+		max-inline-size: 65ch;
+		margin-block: 12px 24px;
+		color: var(--fds-text-secondary);
+
+		font: {
+			size: 1.6rem;
+			weight: 400;
 		}
 
-		h1 {
-			font-size: 7.2rem;
-		}
+		line-height: 1.65;
 
-		h2 {
-			font-size: 4.8rem;
+		@media (prefers-color-scheme: dark) {
+			color: var(--fds-text-tertiary);
 		}
+	}
 
-		h3 {
-			font-size: 3.2rem;
-		}
+	:global(hr) {
+		margin: 0 0 24px;
+		border: none;
+		border-block-start: 1px solid var(--fds-divider-stroke-default);
+	}
 
-		p {
-			max-inline-size: 65ch;
-			margin-block: 12px 24px;
-			color: var(--fds-text-secondary);
-			font: {
-				size: 1.6rem;
-				weight: 400;
-			}
-			line-height: 1.65;
-			@media (prefers-color-scheme: dark) {
-				color: var(--fds-text-tertiary);
-			}
-		}
-
-		hr {
-			margin: 0 0 24px;
-			border: none;
-			border-block-start: 1px solid var(--fds-divider-stroke-default);
-		}
-
-		.buttons-spacer {
-			@include flex($inline: true, $wrap: true, $gap: 8px);
-		}
+	:global(.buttons-spacer) {
+		@include flex($inline: true, $wrap: true, $gap: 8px);
 	}
 
 	&-inner {
