--- a/src/styles/pages/blog.scss
+++ b/src/styles/pages/blog.scss
@@ -1,12 +1,10 @@
-:global {
-	#blog {
-		position: relative;
+:global(#blog) {
+	position: relative;
+}
 
-		.page-section-inner {
-			position: static;
-			max-inline-size: 1200px;
-		}
-	}
+:global(#blog .page-section-inner) {
+	position: static;
+	max-inline-size: 1200px;
 }
 
 .blog-backdrop {
