Revert "Dependabot: (deps-dev): Bump the dependencies group with 12 updates"

--- a/src/layout/CommunitySection/CommunitySection.scss
+++ b/src/layout/CommunitySection/CommunitySection.scss
@@ -55,8 +55,7 @@
 		padding: 72px 48px;
 		border-radius: var(--fds-overlay-corner-radius);
 		background-color: #f9f9f9;
-		box-shadow:
-			0 2.74416px 2.74416px hsl(0, 0%, 0%, 3%),
+		box-shadow: 0 2.74416px 2.74416px hsl(0, 0%, 0%, 3%),
 			0 5.48831px 5.48831px hsl(0, 0%, 0%, 4%),
 			0 13.7208px 10.9766px hsl(0, 0%, 0%, 5%),
 			0 20.5812px 20.5812px hsl(0, 0%, 0%, 6%),
