--- a/src/layout/Navbar/Navbar.scss
+++ b/src/layout/Navbar/Navbar.scss
@@ -84,6 +84,7 @@
 	}
 }
 
+
 .buttons {
 	z-index: 1;
 	display: flex;
@@ -115,16 +116,18 @@
 	}
 }
 
-:global(.navbar .button.sidebar-button) {
-	inline-size: 38px;
-}
+:global {
+	.navbar .button.sidebar-button {
+		inline-size: 38px;
 
-:global(.navbar .button.sidebar-button:active .fluent-icon) {
-	transform: scaleX(0.65);
-}
+		&:active .fluent-icon {
+			transform: scaleX(0.65);
+		}
 
-:global(.navbar .button.sidebar-button .fluent-icon) {
-	inline-size: 16px;
+		.fluent-icon {
+			inline-size: 16px;
+		}
+	}
 }
 
 .sidebar {
