--- a/src/styles/pages/blogPost.scss
+++ b/src/styles/pages/blogPost.scss
@@ -58,18 +58,20 @@
 			border-radius: 50%;
 		}
 
-		:global(.menu-flyout) {
-			min-inline-size: 120px;
-		}
+		:global {
+			.menu-flyout {
+				min-inline-size: 120px;
 
-		:global(.menu-flyout-container) {
-			margin-inline-start: auto;
-		}
+				&-container {
+					margin-inline-start: auto;
+				}
 
-		:global(.menu-flyout-item :any-link) {
-			text-decoration: none;
-			color: currentColor;
-			min-inline-size: 100%;
+				&-item :any-link {
+					text-decoration: none;
+					color: currentColor;
+					min-inline-size: 100%;
+				}
+			}
 		}
 	}
 
