--- a/src/layout/Footer/Footer.scss
+++ b/src/layout/Footer/Footer.scss
@@ -1,25 +1,27 @@
 @use "src/styles/mixins" as *;
 
-:global(#page-footer) {
-	border-block-start: 1px solid var(--fds-divider-stroke-default);
-}
+:global {
+	#page-footer {
+		border-block-start: 1px solid var(--fds-divider-stroke-default);
 
-:global(#page-footer .page-section-inner) {
-	@include flex($align: top, $justify: space-between, $gap: 48px);
-}
+		.page-section-inner {
+			@include flex($align: top, $justify: space-between, $gap: 48px);
+		}
 
-:global(#page-footer p) {
-	margin: 12px 0;
-}
+		p {
+			margin: 12px 0;
+		}
 
-:global(#page-footer .button.style-hyperlink) {
-	display: block;
-	inline-size: fit-content;
-	margin-inline: -11px;
-	margin-block-end: 8px;
+		:global(.button.style-hyperlink) {
+			display: block;
+			inline-size: fit-content;
+			margin-inline: -11px;
+			margin-block-end: 8px;
 
-	&:last-child {
-		margin-block-end: 0;
+			&:last-child {
+				margin-block-end: 0;
+			}
+		}
 	}
 }
 
@@ -29,7 +31,6 @@
 		gap: 24px;
 		grid-template-columns: 2fr 1fr;
 	}
-
 	.column {
 		inline-size: 100%;
 		min-inline-size: unset;
