--- a/src/lib/ColorSwatch/ColorSwatch.scss
+++ b/src/lib/ColorSwatch/ColorSwatch.scss
@@ -1,39 +1,38 @@
-.color-swatch {
-	margin: 0;
-	appearance: none;
+:global {
+	.color-swatch {
+		margin: 0;
+		appearance: none;
 
-	&.type- {
-		&standard {
-			inline-size: 72px;
-			block-size: 72px;
-			border-radius: var(--fds-control-corner-radius);
-			overflow: hidden;
+		&.type- {
+			&standard {
+				inline-size: 72px;
+				block-size: 72px;
+				border-radius: var(--fds-control-corner-radius);
+				overflow: hidden;
 
-			&:checked {
-				border-radius: calc(var(--fds-control-corner-radius) + 2px);
-				box-shadow:
-					inset 0 0 0 2px var(--fds-accent-default),
-					inset 0 0 0 3px var(--fds-solid-background-base);
+				&:checked {
+					border-radius: calc(var(--fds-control-corner-radius) + 2px);
+					box-shadow: inset 0 0 0 2px var(--fds-accent-default),
+						inset 0 0 0 3px var(--fds-solid-background-base);
+				}
+
+				&:focus-visible {
+					box-shadow: inset 0 0 0 2px var(--fds-accent-default),
+						inset 0 0 0 3px var(--fds-solid-background-base),
+						0 0 0 1px var(--fds-solid-background-base),
+						0 0 0 3px var(--fds-focus-stroke-outer) !important;
+				}
 			}
 
-			&:focus-visible {
-				box-shadow:
-					inset 0 0 0 2px var(--fds-accent-default),
-					inset 0 0 0 3px var(--fds-solid-background-base),
-					0 0 0 1px var(--fds-solid-background-base),
-					0 0 0 3px var(--fds-focus-stroke-outer) !important;
-			}
-		}
+			&round {
+				inline-size: 36px;
+				block-size: 36px;
+				border-radius: 36px;
 
-		&round {
-			inline-size: 36px;
-			block-size: 36px;
-			border-radius: 36px;
-
-			&:checked {
-				box-shadow:
-					0 0 0 1px var(--fds-solid-background-base),
-					0 0 0 3px var(--fds-focus-stroke-outer);
+				&:checked {
+					box-shadow: 0 0 0 1px var(--fds-solid-background-base),
+						0 0 0 3px var(--fds-focus-stroke-outer);
+				}
 			}
 		}
 	}
